manifest-file/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flas-ind-svc
  namespace: flask-html
spec:
  selector:
    app: flas-ind
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
