manifest-file/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flas-ind-ingress
  namespace: flask-html
spec:
  ingressClassName: nginx
  rules:
    - host: flask.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flas-ind-svc
                port:
                  number: 80
